Handling data imbalance by SMOTE and using StandardScaler for social attributes

--- a/code/notebooks/model_building_and_evaluation-SMOTE.ipynb
+++ b/code/notebooks/model_building_and_evaluation-SMOTE.ipynb
@@ -6,8 +6,8 @@
    "id": "999505e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T09:21:58.706709Z",
-     "start_time": "2024-03-25T09:21:58.506889Z"
+     "end_time": "2024-03-25T13:13:25.115575Z",
+     "start_time": "2024-03-25T13:13:24.927868Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "id": "62b3c310",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T09:22:07.050624Z",
-     "start_time": "2024-03-25T09:22:06.935732Z"
+     "end_time": "2024-03-25T13:13:25.265828Z",
+     "start_time": "2024-03-25T13:13:25.116577Z"
     }
    },
    "outputs": [],
@@ -63,8 +63,8 @@
    "id": "be911431",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T09:22:07.887090Z",
-     "start_time": "2024-03-25T09:22:07.882933Z"
+     "end_time": "2024-03-25T13:13:25.270990Z",
+     "start_time": "2024-03-25T13:13:25.266888Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "id": "29250c0b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T09:22:23.553998Z",
-     "start_time": "2024-03-25T09:22:23.538852Z"
+     "end_time": "2024-03-25T13:13:25.291278Z",
+     "start_time": "2024-03-25T13:13:25.272259Z"
     }
    },
    "outputs": [],
@@ -226,8 +226,8 @@
    "id": "571d8426",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T09:26:29.796455Z",
-     "start_time": "2024-03-25T09:22:25.308755Z"
+     "end_time": "2024-03-25T13:18:16.861804Z",
+     "start_time": "2024-03-25T13:13:25.292222Z"
     }
    },
    "outputs": [
@@ -255,9 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b589ec2e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-25T13:18:16.864783Z",
+     "start_time": "2024-03-25T13:18:16.862903Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
