--- a/code/notebooks/model_building_and_evaluation.ipynb
+++ b/code/notebooks/model_building_and_evaluation.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "999505e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T08:06:42.582594Z",
-     "start_time": "2024-03-25T08:06:42.573437Z"
+     "end_time": "2024-03-25T13:05:15.133970Z",
+     "start_time": "2024-03-25T13:05:14.898328Z"
     }
    },
    "outputs": [],
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "62b3c310",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T08:06:43.020Z",
-     "start_time": "2024-03-25T08:06:42.958268Z"
+     "end_time": "2024-03-25T13:05:15.228824Z",
+     "start_time": "2024-03-25T13:05:15.135247Z"
     }
    },
    "outputs": [],
@@ -59,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "be911431",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T08:06:43.260460Z",
-     "start_time": "2024-03-25T08:06:43.255879Z"
+     "end_time": "2024-03-25T13:05:15.234280Z",
+     "start_time": "2024-03-25T13:05:15.230081Z"
     }
    },
    "outputs": [],
@@ -85,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "29250c0b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T08:57:16.782034Z",
-     "start_time": "2024-03-25T08:57:16.747416Z"
+     "end_time": "2024-03-25T13:05:15.251431Z",
+     "start_time": "2024-03-25T13:05:15.235765Z"
     }
    },
    "outputs": [],
@@ -222,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "571d8426",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-25T08:59:17.620858Z",
-     "start_time": "2024-03-25T08:57:18.618051Z"
+     "end_time": "2024-03-25T13:07:21.806049Z",
+     "start_time": "2024-03-25T13:05:15.252452Z"
     }
    },
    "outputs": [
@@ -255,9 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b589ec2e",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-25T13:07:21.809055Z",
+     "start_time": "2024-03-25T13:07:21.807137Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
