--- a/code/notebooks/model_building_and_evaluation-SMOTE.ipynb
+++ b/code/notebooks/model_building_and_evaluation-SMOTE.ipynb
@@ -12,16 +12,16 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "import joblib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "# Import all necessary Python packages\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os\n",
-    "import joblib\n",
-    "import time\n",
-    "import gc\n",
-    "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -77,7 +77,8 @@
     "    (RandomForestClassifier(), {'model__n_estimators': [50, 100, 200]}),\n",
     "    (KNeighborsClassifier(), {'model__n_neighbors': [3, 5, 7]}),\n",
     "    (GaussianNB(), {}),  # Naive Bayes doesn't have hyperparameters\n",
-    "    (XGBClassifier(use_label_encoder=False, eval_metric='logloss'), {'model__n_estimators': [50, 100, 200], 'model__max_depth': [3, 5, 7]}),\n",
+    "    (XGBClassifier(use_label_encoder=False, eval_metric='logloss'),\n",
+    "     {'model__n_estimators': [50, 100, 200], 'model__max_depth': [3, 5, 7]}),\n",
     "    (AdaBoostClassifier(), {'model__n_estimators': [50, 100, 200], 'model__learning_rate': [0.01, 0.1, 1]})\n",
     "]\n",
     "\n"
@@ -107,30 +108,30 @@
     "        print(f\"Building and Evaluation of the model: {model_name}\")\n",
     "        model_path = os.path.join(base_path, model_name)\n",
     "        os.makedirs(model_path, exist_ok=True)\n",
-    "        \n",
+    "\n",
     "        pipe = Pipeline([('model', model)])\n",
     "        grid_search = GridSearchCV(pipe, params, cv=5, scoring='accuracy')\n",
     "        grid_search.fit(X_train, y_train)\n",
     "        best_model = grid_search.best_estimator_\n",
     "        y_pred = best_model.predict(X_test)\n",
-    "        \n",
+    "\n",
     "        # Save the model\n",
     "        joblib.dump(best_model, os.path.join(model_path, f'{model_name}.joblib'))\n",
-    "        \n",
+    "\n",
     "        # Accuracy\n",
     "        accuracy = accuracy_score(y_test, y_pred)\n",
     "        accuracies.append(accuracy)\n",
     "        model_names.append(model_name)\n",
-    "        \n",
+    "\n",
     "        # F1 Score\n",
     "        f1 = f1_score(y_test, y_pred)\n",
     "        f1_scores.append(f1)\n",
-    "        \n",
+    "\n",
     "        # Classification Report\n",
     "        report = classification_report(y_test, y_pred)\n",
     "        with open(os.path.join(model_path, 'classification_report.txt'), 'w') as f:\n",
     "            f.write(report)\n",
-    "        \n",
+    "\n",
     "        # Confusion Matrix\n",
     "        plt.figure(figsize=(6, 5))\n",
     "        cm = confusion_matrix(y_test, y_pred)\n",
@@ -140,7 +141,7 @@
     "        plt.ylabel('True')\n",
     "        plt.savefig(os.path.join(model_path, 'confusion_matrix.png'))\n",
     "        plt.close()\n",
-    "        \n",
+    "\n",
     "        # ROC Curve\n",
     "        if len(np.unique(y_test)) == 2:  # Check if binary classification\n",
     "            y_prob = best_model.predict_proba(X_test)[:, 1]\n",
@@ -184,7 +185,7 @@
     "            plt.close()\n",
     "        else:\n",
     "            print(f\"The model in the pipeline does not support feature importances.\")\n",
-    "         \n",
+    "\n",
     "    # Plotting model comparison for Accuracy\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    sns.barplot(x=model_names, y=accuracies)\n",
@@ -194,7 +195,7 @@
     "    plt.xticks(rotation=45)\n",
     "    plt.savefig(os.path.join(base_path, 'model_accuracy_comparison.png'))\n",
     "    plt.close()\n",
-    "    \n",
+    "\n",
     "    # Assuming you have calculated and appended F1 scores in f1_scores list\n",
     "    # Plotting model comparison for F1 Score\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -205,7 +206,7 @@
     "    plt.xticks(rotation=45)\n",
     "    plt.savefig(os.path.join(base_path, 'model_f1_score_comparison.png'))\n",
     "    plt.close()\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(10, 8))\n",
     "    for fpr, tpr, roc_auc, label in zip(fprs, tprs, roc_aucs, model_labels):\n",
     "        plt.plot(fpr, tpr, label=f'{label} (AUC = {roc_auc:.2f})')\n",
