--- a/code/notebooks/model_building_and_evaluation.ipynb
+++ b/code/notebooks/model_building_and_evaluation.ipynb
@@ -12,16 +12,16 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "import joblib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "# Import all necessary Python packages\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os\n",
-    "import joblib\n",
-    "import time\n",
-    "import gc\n",
-    "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -35,6 +35,19 @@
     "from sklearn.pipeline import Pipeline\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Variables\n",
+    "\n",
+    "fig_size = (12, 8)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "834635a4dd5b9df7"
   },
   {
    "cell_type": "code",
@@ -77,7 +90,8 @@
     "    (RandomForestClassifier(), {'model__n_estimators': [50, 100, 200]}),\n",
     "    (KNeighborsClassifier(), {'model__n_neighbors': [3, 5, 7]}),\n",
     "    (GaussianNB(), {}),  # Naive Bayes doesn't have hyperparameters\n",
-    "    (XGBClassifier(use_label_encoder=False, eval_metric='logloss'), {'model__n_estimators': [50, 100, 200], 'model__max_depth': [3, 5, 7]}),\n",
+    "    (XGBClassifier(use_label_encoder=False, eval_metric='logloss'),\n",
+    "     {'model__n_estimators': [50, 100, 200], 'model__max_depth': [3, 5, 7]}),\n",
     "    (AdaBoostClassifier(), {'model__n_estimators': [50, 100, 200], 'model__learning_rate': [0.01, 0.1, 1]})\n",
     "]\n",
     "\n"
@@ -107,32 +121,32 @@
     "        print(f\"Building and Evaluation of the model: {model_name}\")\n",
     "        model_path = os.path.join(base_path, model_name)\n",
     "        os.makedirs(model_path, exist_ok=True)\n",
-    "        \n",
+    "\n",
     "        pipe = Pipeline([('model', model)])\n",
     "        grid_search = GridSearchCV(pipe, params, cv=5, scoring='accuracy')\n",
     "        grid_search.fit(X_train, y_train)\n",
     "        best_model = grid_search.best_estimator_\n",
     "        y_pred = best_model.predict(X_test)\n",
-    "        \n",
+    "\n",
     "        # Save the model\n",
     "        joblib.dump(best_model, os.path.join(model_path, f'{model_name}.joblib'))\n",
-    "        \n",
+    "\n",
     "        # Accuracy\n",
     "        accuracy = accuracy_score(y_test, y_pred)\n",
     "        accuracies.append(accuracy)\n",
     "        model_names.append(model_name)\n",
-    "        \n",
+    "\n",
     "        # F1 Score\n",
     "        f1 = f1_score(y_test, y_pred)\n",
     "        f1_scores.append(f1)\n",
-    "        \n",
+    "\n",
     "        # Classification Report\n",
     "        report = classification_report(y_test, y_pred)\n",
     "        with open(os.path.join(model_path, 'classification_report.txt'), 'w') as f:\n",
     "            f.write(report)\n",
-    "        \n",
+    "\n",
     "        # Confusion Matrix\n",
-    "        plt.figure(figsize=(6, 5))\n",
+    "        plt.figure(figsize=fig_size)\n",
     "        cm = confusion_matrix(y_test, y_pred)\n",
     "        sns.heatmap(cm, annot=True, fmt=\"d\")\n",
     "        plt.title(f\"Confusion Matrix for {model_name}\")\n",
@@ -140,13 +154,13 @@
     "        plt.ylabel('True')\n",
     "        plt.savefig(os.path.join(model_path, 'confusion_matrix.png'))\n",
     "        plt.close()\n",
-    "        \n",
+    "\n",
     "        # ROC Curve\n",
     "        if len(np.unique(y_test)) == 2:  # Check if binary classification\n",
     "            y_prob = best_model.predict_proba(X_test)[:, 1]\n",
     "            fpr, tpr, thresholds = roc_curve(y_test, y_prob)\n",
     "            roc_auc = auc(fpr, tpr)\n",
-    "            plt.figure(figsize=(12, 8))\n",
+    "            plt.figure(figsize=fig_size)\n",
     "            plt.plot(fpr, tpr, label=f'ROC curve (area = {roc_auc:.2f})')\n",
     "            plt.plot([0, 1], [0, 1], 'k--')\n",
     "            plt.xlim([0.0, 1.0])\n",
@@ -172,7 +186,7 @@
     "            feature_names = np.array(X_train.columns)\n",
     "\n",
     "            # Plotting the feature importances\n",
-    "            plt.figure(figsize=(12, 8))\n",
+    "            plt.figure(figsize=fig_size)\n",
     "            plt.title(\"Feature Importances\")\n",
     "            plt.bar(range(X_train.shape[1]), importances[indices], color=\"steelblue\", align=\"center\")\n",
     "            plt.xticks(range(X_train.shape[1]), [feature_names[i] for i in indices], rotation=90)\n",
@@ -184,9 +198,9 @@
     "            plt.close()\n",
     "        else:\n",
     "            print(f\"The model in the pipeline does not support feature importances.\")\n",
-    "         \n",
+    "\n",
     "    # Plotting model comparison for Accuracy\n",
-    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    sns.barplot(x=model_names, y=accuracies)\n",
     "    plt.title('Model Comparison - Accuracy')\n",
     "    plt.xlabel('Model')\n",
@@ -194,10 +208,10 @@
     "    plt.xticks(rotation=45)\n",
     "    plt.savefig(os.path.join(base_path, 'model_accuracy_comparison.png'))\n",
     "    plt.close()\n",
-    "    \n",
+    "\n",
     "    # Assuming you have calculated and appended F1 scores in f1_scores list\n",
     "    # Plotting model comparison for F1 Score\n",
-    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    sns.barplot(x=model_names, y=f1_scores)\n",
     "    plt.title('Model Comparison - F1 Score')\n",
     "    plt.xlabel('Model')\n",
@@ -205,8 +219,8 @@
     "    plt.xticks(rotation=45)\n",
     "    plt.savefig(os.path.join(base_path, 'model_f1_score_comparison.png'))\n",
     "    plt.close()\n",
-    "    \n",
-    "    plt.figure(figsize=(10, 8))\n",
+    "\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    for fpr, tpr, roc_auc, label in zip(fprs, tprs, roc_aucs, model_labels):\n",
     "        plt.plot(fpr, tpr, label=f'{label} (AUC = {roc_auc:.2f})')\n",
     "    plt.plot([0, 1], [0, 1], 'k--', label='Chance (AUC = 0.50)')\n",
