--- a/code/notebooks/data-analysis-with-SMOTE.ipynb
+++ b/code/notebooks/data-analysis-with-SMOTE.ipynb
@@ -12,18 +12,18 @@
    },
    "outputs": [],
    "source": [
+    "import gc\n",
     "# Import all necessary Python packages\n",
     "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter\n",
+    "\n",
     "import category_encoders as ce\n",
-    "import gc\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from collections import Counter\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "outputs": [],
    "source": [
     "# Convert Target Variable(y) into numeric\n",
-    "data.y = data.y.map({'no':0, 'yes':1}).astype('uint8')"
+    "data.y = data.y.map({'no': 0, 'yes': 1}).astype('uint8')"
    ]
   },
   {
@@ -558,6 +558,8 @@
    "outputs": [],
    "source": [
     "eda_folder_path = '../exploratory_analysis'\n",
+    "\n",
+    "\n",
     "# Build a function to show categorical values disribution\n",
     "def plot_bar(column):\n",
     "    # temp df \n",
@@ -729,9 +731,9 @@
     "def encode(data, col):\n",
     "    return pd.concat([data, pd.get_dummies(col, prefix=col.name, dtype='uint')], axis=1)\n",
     "\n",
+    "\n",
     "for col in cols_for_hot_encoding:\n",
     "    data = encode(data, data[col])\n",
-    "    \n",
     "\n",
     "# Drop tranfromed features\n",
     "data.drop(cols_for_hot_encoding, axis=1, inplace=True)"
@@ -787,21 +789,21 @@
     "    # Ensure the input is a DataFrame to avoid attribute errors\n",
     "    if not isinstance(data, pd.DataFrame):\n",
     "        raise ValueError(\"data must be a pandas DataFrame\")\n",
-    "    \n",
+    "\n",
     "    # Separate the features and the target\n",
     "    X = data.drop(target_column, axis=1)\n",
     "    y = data[target_column]\n",
-    "    \n",
+    "\n",
     "    # Create and fit the target encoder\n",
     "    target_encoder = ce.TargetEncoder(cols=columns_to_encode)\n",
     "    target_encoder.fit(X, y)\n",
-    "    \n",
+    "\n",
     "    # Transform the data and replace the original columns with encoded ones\n",
     "    X_encoded = target_encoder.transform(X)\n",
-    "    \n",
+    "\n",
     "    # If the target column was dropped, add it back\n",
     "    X_encoded[target_column] = y\n",
-    "    \n",
+    "\n",
     "    return X_encoded, target_encoder"
    ]
   },
@@ -970,7 +972,6 @@
    "source": [
     "\n",
     "def find_quantile_bins(data, column_name, column_group_name, num_bins=6):\n",
-    "\n",
     "    # Ensure the column exists in the DataFrame\n",
     "    if column_name not in data.columns:\n",
     "        raise ValueError(f\"{column_name} not found in DataFrame\")\n",
@@ -993,7 +994,7 @@
     "\n",
     "    # Create a dictionary to store record counts for each bin\n",
     "    bin_records = dict(bin_counts)\n",
-    "    \n",
+    "\n",
     "    data[column_group_name] = binned_data\n",
     "\n",
     "    return bin_edges, bin_records, data\n",
@@ -1096,7 +1097,7 @@
     "standard_scaler = StandardScaler()\n",
     "\n",
     "# List of columns to standardize\n",
-    "columns_to_standardize =  ['emp.var.rate', 'cons.price.idx', 'nr.employed', 'euribor3m', 'cons.conf.idx']\n",
+    "columns_to_standardize = ['emp.var.rate', 'cons.price.idx', 'nr.employed', 'euribor3m', 'cons.conf.idx']\n",
     "\n",
     "# Apply Standardization to the specified columns\n",
     "data[columns_to_standardize] = standard_scaler.fit_transform(data[columns_to_standardize])\n",
@@ -1127,7 +1128,7 @@
    "outputs": [],
    "source": [
     "'''Drop the dublicates'''\n",
-    "data.drop_duplicates(inplace=True) "
+    "data.drop_duplicates(inplace=True)"
    ]
   },
   {
@@ -1228,7 +1229,7 @@
     "random_state = 44\n",
     "\n",
     "# split data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data, y, test_size=0.2, random_state=random_state,  stratify=y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data, y, test_size=0.2, random_state=random_state, stratify=y)\n",
     "# collect excess data\n",
     "gc.collect()"
    ]
